# xml2sql

./: .cursorrules  .dockerignore  .gitignore  AUDIT_COMPLETION_REPORT.md  AUDIT_REPORT.md  BUG-020-FIX-SUMMARY.md  BUG_TRACKER.md  CHANGELOG.md  CLAUDE.md  CLIENT_DEPLOYMENT_GUIDE.md  COMPREHENSIVE HANA CALCULATION VIEW XML-TO-SNOWFLAKE SQL MIGRATION CATALOG.md  COMPREHENSIVE_AUDIT_REPORT.md  CONVERSION_RULES_IMPLEMENTATION_PLAN.md  CV_MCM_CNTRL_Q51_DEBUGGING_NOTES.md  CUsersiliyaOneDriveDesktopxml2sqlopenapi_dump.json  CUsersiliyaOneDriveDesktopxml2sqltest_sse.xml  DEPLOYMENT_QUICK_REFERENCE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  EMPIRICAL_TEST_ITERATION_LOG.md  FEATURE_SUPPORT_MAP.md  FIXES_AFTER_COMMIT_4eff5fb.md  GIT_PUSH_COMMANDS.txt  GOLDEN_COMMIT.yaml  HANA_CONVERSION_RULES.md  INSTALLATION_GUIDE.md  MANUAL_TESTING_GUIDE.md  PARAMETER_HANDLING_STRATEGY.md  PATTERN_MATCHING_DESIGN.md  PROJECT_STATUS.md  Procfile  QUICK_START.md  QUICK_START_CLIENT.md  README.md  RELEASE_CHECKLIST.md  SAP_INSTANCE_TYPE_STRATEGY.md  SESSION_3_SUMMARY.md  SESSION_RECOVERY_SUMMARY.md  SESSION_SUMMARY_2025-11-18.md  (+22 more)
.claude/: settings.local.json
DEPLOYMENT_SCRIPTS/: 01_V_C_SOLD_MATERIALS.sql  02_V_C_SALES_BOM.sql  03_V_C_RECENTLY_CREATED_PRODUCTS.sql  04_V_C_KMDM_MATERIALS.sql  05_V_C_CURRENT_MAT_SORT.sql  06_V_C_MATERIAL_DETAILS.sql  07_V_C_SOLD_MATERIALS_PROD.sql  README.md
Source (XML Files)/: HANA_CV.md  KMDM_Materials.XML  Material Details.XML  Sold_Materials.XML  book.xml  manual testing results.md
Target (SQL Scripts)/: CV_CNCLD_EVNTS.sql  (+17 more)
(+103 files in other folders)
