[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-to-sql"
version = "0.1.0"
description = "Convert SAP HANA calculation view XML definitions into Snowflake SQL artifacts."
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.2.0",
    "typer>=0.12.3",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
xml-to-sql = "xml_to_sql.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

